--- a/module3-solution/css/styles.css
+++ b/module3-solution/css/styles.css
@@ -34,7 +34,7 @@ body {
 
 .navbar-brand h1 {
     color: #7d1913;
-    font-family: 'Abril Fatface', cursive;
+    font-family: 'Tangerine', cursive;
     font-weight: bolder;
     font-size: 1.8em;
 }
